--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
-@import "tw-animate-css";
-
+/* @import "tw-animate-css"; */
+/* 
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -41,7 +41,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
-}
+} */
 
 :root {
   --radius: 0.625rem;
@@ -78,7 +78,7 @@
   --sidebar-ring: oklch(0.708 0 0);
 }
 
-.dark {
+/* .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
@@ -119,4 +119,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
