--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import "tailwind.config.js";
+@import "tailwindcss";
 /* @import "tw-animate-css"; */
 /* 
 @custom-variant dark (&:is(.dark *));
@@ -120,6 +120,3 @@
     @apply bg-background text-foreground;
   }
 } */
-
-
-
