--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -120,3 +120,12 @@
     @apply bg-background text-foreground;
   }
 } */
+
+
+.flex-center {
+  @apply flex items-center justify-center
+}
+
+.hidden_show_md {
+  @apply hidden md:block
+}
